--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -49,7 +49,7 @@
                 <div>
                     <br>
                     <h5>October 2021 – Present</h5>
-                    <h4>DATA ANALYST (EDMA), PERMATABANK</h4>
+                    <h4>&#128202; DATA ANALYST (EDMA), PERMATABANK</h4>
                     <p>Currently enrolled in a trainee program, involved in 3 transformation projects.
                     <strong><i>Assessed data quality, create data mart, data preparation, EDA, and clean-up </i></strong>of 48+
                     Mio data records, by 4.5 Mio customers with data anomalies constraint <strong><i>using SAS, and
@@ -59,11 +59,13 @@
 
                     <br>
                     <h5>May 2021 – June 2021</h5>
-                    <h4>FINANCIAL ADVISOR INTERNSHIP, ADVISORS ALLIANCE GROUP</h4>
-                    <p>Researched job market in Indonesia, and <strong><i>provide ideas, solutions</i></strong> to improve AAGI young
-                    talents recruitment. Held Webinar with “Investment 101, and
-                    Money Management” theme, <strong><i>took up a role of moderator</i></strong>, and webinar was successful with more than 
-                    <strong><i>180 participants.</i></strong></p>
+                    <h4>&#128372; FINANCIAL ADVISOR INTERNSHIP, ADVISORS ALLIANCE GROUP</h4>
+                    <p>
+                        Researched job market in Indonesia, and <strong><i>provide ideas, solutions</i></strong> to improve AAGI young
+                        talents recruitment. Held Webinar with “Investment 101, and
+                        Money Management” theme, <strong><i>took up a role of moderator</i></strong>, and webinar was successful with more than 
+                        <strong><i>180 participants.</i></strong>
+                    </p>
                 </div>
 
                 <div>
@@ -73,21 +75,43 @@
                 </div>
             </div>
 
-            <div class="main col-lg-6 col-md-5 col-xs-3" style="background-color: #fdffd7;padding:40px; padding-top:40px">
+            <div class="main col-lg-6 col-md-5 col-xs-3" style="background-color: #fdffd7;padding:70px; padding-top:40px">
                 
                 <div>
                     <h2>&#127806; Projects</h2>
-                    <i><p style="font-size: 16px">Area of Interest : Analytics and Insights</p></i>
+                    <i><p style="font-size: 16px">Skills Showcased : Python, HTML, CSS, JavaScript, Django</p></i>
                 </div>
 
                 <div>
                     <br>
+                    <h5>October 2022</h5>
+                    <a href="about.html"><h4>&#127774; KANG</h4></a>
+                    <p>
+                        Built Static Web of online resume or online profile, hosted free on GitHub Page.
+                        Web built with <strong><i>HTML, and CSS</i></strong>. 
+                        This project name 'Kang' has a meaning behind it.
+                        The origin of the name Kang means work, it is derived from Teochew word 
+                        of Kang or the word 工 gōng from Mandarin.
+                    </p>
+                    <i style="font-size:14px;color: #3a3b3c">The reason this project came to be was, 
+                        it has been awhile since I used my HTML, and CSS skills. Therefore, to keep in touch with the skills
+                        I built this web for fun. </i>
+                    </p>
+
+                    <br>
                     <h5>February 2021</h5>
-                    <h4>STOCKHOLDER PERFORMANCE ANALYZER</h4>
-                    YouTube Link: https://youtu.be/Qg3zCQu3kTM
-                    - Built WebApp to measure growth, profit, and track stocks owned by stockholders with
-                    historical and real time stocks data, utilizing open source API.
-                    - WebApp built with Django, Python, and JavaScript.
+                    <a href="https://youtu.be/Qg3zCQu3kTM"><h4>&#128200; STOCKHOLDER PERFORMANCE ANALYZER</h4></a>
+
+                    <p>
+                    <strong><i>Built WebApp to measure growth, profit, and track stocks </i></strong>owned by stockholders with
+                    historical and real time stocks data, utilizing open source API. WebApp built with 
+                    <strong><i>Django, Python, and JavaScript.</i></strong>
+                    </p>
+
+                    <i style="font-size:14px;color: #3a3b3c">The reason this project came to be was, as I was tracking my transactions,
+                    and behaviour on Excel, and I wish I had a 
+                    Webapp to automate, and reduce the steps of tracking, and analyzing them.</i>
+                    </p>
                 </div>
 
                 <div>
