--- a/Kang/index.html
+++ b/Kang/index.html
@@ -65,13 +65,13 @@
                 
                 <p id="desc">
                     Graduated with a degree in &#128210; Accounting.
-                    <br>Self learn coding with the help of a friend &#128104; 
+                    <br>Self learn coding with the help of a friend 
                     <a href="https://www.linkedin.com/in/justin-trisno-25b20514b">Justin</a>, 
                     whom I met during my internship.
                     
                     <br><br>Currently working in PermataBank, 
-                    &#128202; analysing portfolio and creating insights.
-                    <br>Favorite &#128736; tools for analytics include
+                    analysing portfolio and creating insights.
+                    <br>Favorite tools for analytics include
                     <strong><i>SAS, SQL, Excel, and Python (Jupyter Notebook)</i></strong>.
 
                     <br><br>When I turn off my laptop, I love to &#128218; read, &#127939; work out, 
