--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -49,7 +49,7 @@
                 <div>
                     <br>
                     <h5>October 2021 – Present</h5>
-                    <h4>&#128202; DATA ANALYST (EDMA), PERMATABANK</h4>
+                    <h4>DATA ANALYST (EDMA), PERMATABANK</h4>
                     <p>Currently enrolled in a trainee program, involved in 3 transformation projects.
                     <strong><i>Assessed data quality, create data mart, data preparation, EDA, and clean-up </i></strong>of 48+
                     Mio data records, by 4.5 Mio customers with data anomalies constraint <strong><i>using SAS, and
@@ -59,7 +59,7 @@
 
                     <br>
                     <h5>May 2021 – June 2021</h5>
-                    <h4>&#128372; FINANCIAL ADVISOR INTERNSHIP, ADVISORS ALLIANCE GROUP</h4>
+                    <h4>FINANCIAL ADVISOR INTERNSHIP, ADVISORS ALLIANCE GROUP</h4>
                     <p>
                         Researched job market in Indonesia, and <strong><i>provide ideas, solutions</i></strong> to improve AAGI young
                         talents recruitment. Held Webinar with “Investment 101, and
@@ -78,14 +78,14 @@
             <div class="main col-lg-6 col-md-5 col-xs-3" style="background-color: #fdffd7;padding:70px; padding-top:40px">
                 
                 <div>
-                    <h2>&#127806; Projects</h2>
+                    <h2>&#9997; Projects</h2>
                     <i><p style="font-size: 16px">Skills Showcased : Python, HTML, CSS, JavaScript, Django</p></i>
                 </div>
 
                 <div>
                     <br>
                     <h5>October 2022</h5>
-                    <a href="about.html"><h4>&#127774; KANG</h4></a>
+                    <a href="about.html"><h4>KANG</h4></a>
                     <p>
                         Built Static Web of online resume or online profile, hosted free on GitHub Page.
                         Web built with <strong><i>HTML, and CSS</i></strong>. 
@@ -100,7 +100,7 @@
 
                     <br>
                     <h5>February 2021</h5>
-                    <a href="https://youtu.be/Qg3zCQu3kTM"><h4>&#128200; STOCKHOLDER PERFORMANCE ANALYZER</h4></a>
+                    <a href="https://youtu.be/Qg3zCQu3kTM"><h4>STOCKHOLDER PERFORMANCE ANALYZER</h4></a>
 
                     <p>
                     <strong><i>Built WebApp to measure growth, profit, and track stocks </i></strong>owned by stockholders with
