--- a/Kang/about.html
+++ b/Kang/about.html
@@ -50,13 +50,12 @@
                         <br>The origin of the name Kang means work, it is derived from Teochew word 
                         of <strong>Kang</strong> or the word<strong> 工 gōng</strong> from Mandarin.
 
-                        <br><br><br>
-                        Kang by CodingCoco <a href="index.html">Talent Lim</a>
                     </p>
                 </div>
-            
+                
+                <br>
                 <footer class="small text-center text-muted">
-                    Further information on <a href="https://www.linkedin.com/in/talentlim">LinkedIn</a> | Site hosted free with GitHub Page
+                    Kang by CodingCoco <a href="https://www.linkedin.com/in/talentlim">Talent Lim</a>
                 </footer>
             </div>
         </div>
