--- a/Kang/contact.html
+++ b/Kang/contact.html
@@ -56,6 +56,8 @@
                     <h1 >&#128222; Connect with me</h1><br><br> 
                 </div>
 
+                <br>
+
                 <div class="flex-container">
                     <div id="wrap" class="contact">
                         <a href="https://www.linkedin.com/in/talentlim">
@@ -70,6 +72,12 @@
                     </div>
                     
                 </div>
+
+                <br><br><br>
+                <footer class="small text-center text-muted">
+                    Kang by CodingCoco <a href="https://www.linkedin.com/in/talentlim">Talent Lim</a>
+                </footer>
+
             </div>
         </div>
     </body>
