--- a/Kang/index.html
+++ b/Kang/index.html
@@ -82,7 +82,8 @@
                 </p>
                 
                 <h5>
-                    <br><br>Open to opportunities &#127759; in Asia, and Australia.
+                    <!--<br><br>Open to opportunities &#127759; in Southeast Asia, East Asia, and Australia.-->
+                    <br>Open for discussions, and new connections &#127759;.
                     
                     <div id="wrap">
                         <br><a href="contact.html">
@@ -90,6 +91,11 @@
                         </a>
                     </div>
                 </h5>
+
+                <br>
+                <footer class="small text-center text-muted">
+                    Kang by CodingCoco <a href="https://www.linkedin.com/in/talentlim">Talent Lim</a>
+                </footer>
             </div>
         </div>
     </body>
