--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -87,7 +87,7 @@
                     <h5>October 2022</h5>
                     <a href="about.html"><h4>KANG</h4></a>
                     <p>
-                        Built Static Web of online resume or online profile, hosted free on GitHub Page.
+                        Built Static Web of online resume or online profile, hosted free on GitHub Pages.
                         Web built with <strong><i>HTML, and CSS</i></strong>. 
                         This project name 'Kang' has a meaning behind it.
                         The origin of the name Kang means work, it is derived from Teochew word 
