--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -8,6 +8,16 @@
         <link rel="icon"href="android-chrome-512x512.png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-243916980-2"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-243916980-2');
+        </script>
     </head>
     
     <body>
