--- a/Kang/index.html
+++ b/Kang/index.html
@@ -74,7 +74,7 @@
                 <br><br>
                 
                 <p id="desc">
-                    Graduated with a degree in &#128210; Accounting.
+                    Graduated with a degree in Accounting.
                     <br>Self learn coding with the help of a friend 
                     <a href="https://www.linkedin.com/in/justin-trisno-25b20514b">Justin</a>, 
                     whom I met during my internship.
@@ -87,7 +87,7 @@
                     <br><br>When I turn off my laptop, I love to &#128218; read, &#127939; work out, 
                     and play some sports like &#127992; badminton.
 
-                    <br><br>There are more of my &#9997; projects, and detail of work experiences available 
+                    <br><br>There are more of my projects, and detail of work experiences available 
                     <a href="resume.html">here</a>.
                 </p>
                 
