--- a/Kang/index.html
+++ b/Kang/index.html
@@ -62,8 +62,12 @@
                     <span class="tooltiptext">About</span>
                </a></ul>
                 </div>
-                <div id="hide-desktop" class="center"> <img alt="Index Page" src="eco-house.png"
-                    width="200" height="200"></div>
+
+                <div class="flex-container" id="hide-desktop"> 
+                    <div><img alt="Index Page" src="eco-house.png"
+                    width="200" height="200">
+                    </div>
+                </div>
 
                 <div id="hide-desktop">
                     <input id="menu__toggle" type="checkbox" />
