--- a/Kang/about.html
+++ b/Kang/about.html
@@ -49,8 +49,13 @@
                 <span class="tooltiptext">About</span>
            </a></ul>
             </div>
-            <div id="hide-desktop" class="center"> <img alt="About Page" src="android-chrome-512x512.png"
-                width="200" height="200"></div>
+
+            <div class="flex-container" id="hide-desktop"> 
+                <div>
+                <img alt="About Page" src="android-chrome-512x512.png"
+                width="200" height="200">
+            </div>
+            </div>
 
             <div id="hide-desktop">
                 <input id="menu__toggle" type="checkbox" />
