--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -50,8 +50,13 @@
                     <span class="tooltiptext">About</span>
                </a></ul>
                 </div>
-                <div id="hide-desktop" class="center"> <img alt="Resume Page" src="farming.png"
+
+                <div class="flex-container" id="hide-desktop"> 
+                    <div>
+                    <img alt="Resume Page" src="farming.png"
                     width="200" height="200"></div>
+                    </div>
+                    
 
                 <div id="hide-desktop">
                     <input id="menu__toggle" type="checkbox" />
