--- a/Kang/resume.html
+++ b/Kang/resume.html
@@ -105,17 +105,17 @@
                 <div>
                     <br>
                     <h5>October 2021 – Present</h5>
-                    <h4>DATA ANALYST (EDMA), PERMATABANK</h4>
-                    <p>Currently enrolled in a trainee program, involved in 3 transformation projects.
+                    <h4>AM, DATA ANALYST (EDMA) - PERMATABANK</h4>
+                    <p>Currently working as a Consumer Banking Analyst, involved in 3 transformation projects.
                     <strong><i>Assessed data quality, create data mart, data preparation, EDA, and clean-up </i></strong>of 48+
                     Mio data records, by 4.5 Mio customers with data anomalies constraint <strong><i>using SAS, and
                     Python.</i> </strong>Bug fixing on enterprise data, and root cause analysis to source system.
                     <strong><i>Created framework, identify trends, visualize, and present insights </i></strong>
-                    to internal stakeholders <strong><i>using Power BI, Excel, and PowerPoint.</i></strong></p>
+                    to internal stakeholders <strong><i>using Excel, and PowerPoint.</i></strong></p>
 
                     <br>
                     <h5>May 2021 – June 2021</h5>
-                    <h4>FINANCIAL ADVISOR INTERNSHIP, ADVISORS ALLIANCE GROUP</h4>
+                    <h4>FINANCIAL ADVISOR INTERNSHIP - ADVISORS ALLIANCE GROUP</h4>
                     <p>
                         Researched job market in Indonesia, and <strong><i>provide ideas, solutions</i></strong> to improve AAGI young
                         talents recruitment. Held Webinar with “Investment 101, and
