--- a/Kang/contact.html
+++ b/Kang/contact.html
@@ -44,10 +44,16 @@
                     <span class="tooltiptext">Home</span>
                 </a></ul>
 
-                <br><ul id="barcon"><a href="resume.html">
-                    <img alt="Resume Page" src="farming.png"
+                <br><ul id="barcon"><a href="experience.html">
+                    <img alt="Experience Page" src="farming.png"
                     width="50" height="50">
-                    <span class="tooltiptext">Resume</span>
+                    <span class="tooltiptext">Experience</span>
+                </a></ul>
+
+                <br><ul id="barcon"><a href="dashboard.html">
+                    <img alt="Dashboard Page" src="watering-can.png"
+                    width="50" height="50"><br>
+                    <span class="tooltiptext">Dashboard</span>
                 </a></ul>
 
                 <br><ul id="barcon"><a href="contact.html">
@@ -59,16 +65,16 @@
                 <br><ul id="barcon"><a href="about.html">
                     <img alt="About Page" src="android-chrome-512x512.png"
                     width="50" height="50">
-                    <span class="tooltiptext">About</span>
-               </a></ul>
+                    <span class="tooltiptext">Abou Us</span>
+                </a></ul>
                 </div>
 
                 <div class="flex-container" id="hide-desktop"> 
                     <div>
                     <img alt="Contact Page" src="mushrooms.png"
-                    width="200" height="200">
+                    width="200" height="200"></div>
                     </div>
-                </div>
+                    
 
                 <div id="hide-desktop">
                     <input id="menu__toggle" type="checkbox" />
@@ -80,27 +86,33 @@
 
                     <li><a href="index.html">
                     <img alt="Index Page" src="eco-house.png"
-                    width="50" height="50">
+                    width="40" height="40">
                     <br>
-                    <span style="color: black;">Home</span>
+                    <span style="color: black; font-size: small;">Home</span>
                     </a></li> <br>
 
-                    <li><a href="resume.html">
-                    <img alt="Resume Page" src="farming.png"
-                    width="50" height="50"><br>
-                    <span style="color: black;">Resume</span>
+                    <li><a href="experience.html">
+                    <img alt="Experience Page" src="farming.png"
+                    width="40" height="40"><br>
+                    <span style="color: black; font-size: small;">Experience</span>
                     </a></li><br>
+
+                    <li><a href="dashboard.html">
+                    <img alt="Dashboard Page" src="watering-can.png"
+                    width="40" height="40"><br>
+                    <span style="color: black; font-size: small;">Dashboard</span>
+                    </a></li></br>
 
                     <li><a href="contact.html">
                     <img alt="Contact Page" src="mushrooms.png"
-                    width="50" height="50"><br>
-                    <span style="color: black">Contact</span>
+                    width="40" height="40"><br>
+                    <span style="color: black; font-size: small;">Contact</span>
                     </a></li><br>
 
                     <li><a href="about.html">
                     <img alt="About Page" src="android-chrome-512x512.png"
-                    width="50" height="50"><br>
-                    <span style="color: black">About</span>
+                    width="40" height="40"><br>
+                    <span style="color: black; font-size: small;">About</span>
                     </a></li><br>
                     </ul>
                 </div>
