--- a/Kang/experience.html
+++ b/Kang/experience.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <title>Resume</title>
+        <title>Experience</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="styles.css" rel="stylesheet">
         <link rel="icon"href="android-chrome-512x512.png">
@@ -23,7 +23,6 @@
     <body>
         
         <div class="row">
-            
             <div id = "sidebar" class="sidebar col-lg-1 col-md-1" style="background-color: #d2fcfb">
                 <div id="hide-mobile">
                 <ul id="barcon"><a href="index.html">
@@ -32,10 +31,16 @@
                     <span class="tooltiptext">Home</span>
                 </a></ul>
 
-                <br><ul id="barcon"><a href="resume.html">
-                    <img alt="Resume Page" src="farming.png"
+                <br><ul id="barcon"><a href="experience.html">
+                    <img alt="Experience Page" src="farming.png"
                     width="50" height="50">
-                    <span class="tooltiptext">Resume</span>
+                    <span class="tooltiptext">Experience</span>
+                </a></ul>
+
+                <br><ul id="barcon"><a href="dashboard.html">
+                    <img alt="Dashboard Page" src="watering-can.png"
+                    width="50" height="50"><br>
+                    <span class="tooltiptext">Dashboard</span>
                 </a></ul>
 
                 <br><ul id="barcon"><a href="contact.html">
@@ -47,7 +52,7 @@
                 <br><ul id="barcon"><a href="about.html">
                     <img alt="About Page" src="android-chrome-512x512.png"
                     width="50" height="50">
-                    <span class="tooltiptext">About</span>
+                    <span class="tooltiptext">Abou Us</span>
                </a></ul>
                 </div>
 
@@ -68,27 +73,33 @@
 
                     <li><a href="index.html">
                     <img alt="Index Page" src="eco-house.png"
-                    width="50" height="50">
+                    width="40" height="40">
                     <br>
-                    <span style="color: black;">Home</span>
+                    <span style="color: black; font-size: small;">Home</span>
                     </a></li> <br>
 
-                    <li><a href="resume.html">
-                    <img alt="Resume Page" src="farming.png"
-                    width="50" height="50"><br>
-                    <span style="color: black;">Resume</span>
+                    <li><a href="experience.html">
+                    <img alt="Experience Page" src="farming.png"
+                    width="40" height="40"><br>
+                    <span style="color: black; font-size: small;">Experience</span>
                     </a></li><br>
+
+                    <li><a href="dashboard.html">
+                    <img alt="Dashboard Page" src="watering-can.png"
+                    width="40" height="40"><br>
+                    <span style="color: black; font-size: small;">Dashboard</span>
+                    </a></li></br>
 
                     <li><a href="contact.html">
                     <img alt="Contact Page" src="mushrooms.png"
-                    width="50" height="50"><br>
-                    <span style="color: black">Contact</span>
+                    width="40" height="40"><br>
+                    <span style="color: black; font-size: small;">Contact</span>
                     </a></li><br>
 
                     <li><a href="about.html">
                     <img alt="About Page" src="android-chrome-512x512.png"
-                    width="50" height="50"><br>
-                    <span style="color: black">About</span>
+                    width="40" height="40"><br>
+                    <span style="color: black; font-size: small;">About</span>
                     </a></li><br>
                     </ul>
                 </div>
@@ -143,15 +154,14 @@
                     <h5>October 2022</h5>
                     <a href="about.html"><h4>KANG</h4></a>
                     <p>
-                        Built Static Web of online resume or online profile, hosted free on GitHub Pages.
-                        Web built with <strong><i>HTML, and CSS</i></strong>. 
-                        This project name 'Kang' has a meaning behind it.
-                        The origin of the name Kang means work, it is derived from Teochew word 
-                        of Kang or the word 工 gōng from Mandarin.
+                        Built Static Web of online resume or online profile. Web built with <strong><i>HTML, and CSS</i></strong>. 
+                        Used google analytics web traffic data and created  <strong><i><a href="dashboard.html">
+                        Kang online report on Google Data Studio. </a></i></strong>
+                        Created <strong><i><a href="https://public.tableau.com/shared/JB678NYSB?:display_count=n&:origin=viz_share_link">
+                        Tableu online dashboard</a></i></strong>, by downloading Web Traffic data using API to local computer.
                     </p>
-                    <i style="font-size:14px;color: #3a3b3c">The reason this project came to be was, 
-                        it has been awhile since I used my HTML, and CSS skills. Therefore, to keep in touch with the skills
-                        I built this web for fun. </i>
+                    <i style="font-size:14px;color: #3a3b3c">The reason this project came to be was, to refresh my knowledge of HTML, and CSS languages.
+                        As well as, to try new tools, and to challenge myself with some knowledge that I got to be familiar with recently. </i>
                     </p>
 
                     <br>
