--- a/Kang/experience.html
+++ b/Kang/experience.html
@@ -157,8 +157,8 @@
                         Built Static Web of online resume or online profile. Web built with <strong><i>HTML, and CSS</i></strong>. 
                         Used google analytics web traffic data and created  <strong><i><a href="dashboard.html">
                         Kang online report on Google Data Studio. </a></i></strong>
-                        Created <strong><i><a href="https://public.tableau.com/shared/JB678NYSB?:display_count=n&:origin=viz_share_link">
-                        Tableu online dashboard</a></i></strong>, by downloading Web Traffic data using API to local computer.
+                        Created <strong><i><a href="https://public.tableau.com/views/EventsTracker/KangEventsCount?:language=en-GB&publish=yes&:display_count=n&:origin=viz_share_link">
+                        Tableau online dashboard</a></i></strong>, by downloading Web Traffic data using API to local computer.
                     </p>
                     <i style="font-size:14px;color: #3a3b3c">The reason this project came to be was, to refresh my knowledge of HTML, and CSS languages.
                         As well as, to try new tools, and to challenge myself with some knowledge that I got to be familiar with recently. </i>
