--- a/Kang/contact.html
+++ b/Kang/contact.html
@@ -65,7 +65,7 @@
                 <br><ul id="barcon"><a href="about.html">
                     <img alt="About Page" src="android-chrome-512x512.png"
                     width="50" height="50">
-                    <span class="tooltiptext">Abou Us</span>
+                    <span class="tooltiptext">About Us</span>
                 </a></ul>
                 </div>
 
