--- a/Kang/dashboard.html
+++ b/Kang/dashboard.html
@@ -18,6 +18,8 @@
 
         gtag('config', 'G-KLCRQC13B7');
         </script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2618031377842866"
+        crossorigin="anonymous"></script>
     </head>
 
 
