--- a/Kang/about.html
+++ b/Kang/about.html
@@ -116,7 +116,14 @@
                         <br>This project name 'Kang' has a meaning behind it.
                         <br>The origin of the name Kang means work, it is derived from Teochew word 
                         of <strong>Kang</strong> or the word<strong> 工 gōng</strong> from Mandarin.
-
+                    </p>
+                    
+                    <br>
+                    <h5 id="about">Data</h5>
+                    <p id="about1">
+                        Data collected on this website, are such as location, device data. 
+                        <br>Data collected are used to create Google Analytics,
+                         and Tableau dashboard.
                     </p>
                 </div>
                 
