--- a/Kang/experience.html
+++ b/Kang/experience.html
@@ -116,13 +116,15 @@
                 <div>
                     <br>
                     <h5>October 2021 – Present</h5>
-                    <h4>AM, DATA ANALYST (EDMA) - PERMATABANK</h4>
-                    <p>Currently working as a Consumer Banking Analyst, involved in 3 transformation projects.
-                    <strong><i>Assessed data quality, create data mart, data preparation, EDA, and clean-up </i></strong>from multiple data
-                    sources, for consumer banking and ecosystem analysis, with data anomalies constraint <strong><i>using SAS, and
-                    Python.</i> </strong>Bug fixing on enterprise data, and root cause analysis to source system.
-                    <strong><i>Identify trends, visualize, and present insights </i></strong>
-                    <strong><i>using Excel, and PowerPoint.</i></strong></p>
+                    <h4>DATA ANALYST | CONSUMER BANKING ANALYST - PERMATABANK</h4>
+                    <p>- <i>Vintage Analysis, and profitability analysis</i></strong> mainly for liabilities product. <strong><i>Identified cost
+                    inefficiency, and root cause analysis</i></strong> for business problems  <strong><i>using SAS, and
+                    Python.</i></strong>
+                    
+                    <br>-<strong><i> Identify trends, visualize, and present insights</i></strong> to stakeholders 
+                    <strong><i>using Excel, and PowerPoint.</i></strong>
+                    <br>- Provide accurate and timely data to 2 ongoing projects in EDM (MIS & CRM projects).</p>
+ 
 
                     <br>
                     <h5>May 2021 – June 2021</h5>
