--- a/Kang/index.html
+++ b/Kang/index.html
@@ -144,7 +144,7 @@
                     and play some sports like &#127992; badminton.
 
                     <br><br>There are more of my projects, and detail of work experiences available 
-                    <a href="resume.html">here</a>.
+                    <a href="experience.html">here</a>.
                 </p>
                 
                 <h5>
