--- a/Kang/about.html
+++ b/Kang/about.html
@@ -113,9 +113,6 @@
                     <h5 id="about">About</h5>
                     <p id="about1">
                         Kang is a static online resume created with HTML, and CSS.
-                        <br>This project name 'Kang' has a meaning behind it.
-                        <br>The origin of the name Kang means work, it is derived from Teochew word 
-                        of <strong>Kang</strong> or the word<strong> 工 gōng</strong> from Mandarin.
                     </p>
                     
                     <br>
@@ -129,7 +126,8 @@
                 
                 <br>
                 <footer class="small text-center text-muted">
-                    Kang by CodingCoco <a href="https://www.linkedin.com/in/talentlim">Talent Lim</a>
+                    For windows user, please zoom out your browser
+                    <br>Kang by CodingCoco <a href="https://www.linkedin.com/in/talentlim">Talent Lim</a>
                 </footer>
             </div>
         </div>
