--- a/Kang/contact.html
+++ b/Kang/contact.html
@@ -143,7 +143,8 @@
 
                 <br><br><br>
                 <footer class="small text-center text-muted">
-                    Kang by CodingCoco <a href="https://www.linkedin.com/in/talentlim">Talent Lim</a>
+                    For windows user, please zoom out your browser
+                    <br>Kang by CodingCoco <a href="https://www.linkedin.com/in/talentlim">Talent Lim</a>
                 </footer>
 
             </div>
