--- a/Kang/index.html
+++ b/Kang/index.html
@@ -160,7 +160,8 @@
 
                 <br>
                 <footer class="small text-center text-muted">
-                    Kang by CodingCoco <a href="https://www.linkedin.com/in/talentlim">Talent Lim</a>
+                    For windows user, please zoom out your browser
+                    <br>Kang by CodingCoco <a href="https://www.linkedin.com/in/talentlim">Talent Lim</a>
                 </footer>
             </div>
         </div>
