--- a/Kang/experience.html
+++ b/Kang/experience.html
@@ -160,8 +160,10 @@
                         Created <strong><i><a href="https://public.tableau.com/views/EventsTracker/KangEventsCount?:language=en-GB&publish=yes&:display_count=n&:origin=viz_share_link">
                         Tableau online dashboard</a></i></strong>, by downloading Web Traffic data using API to local computer.
                     </p>
-                    <i style="font-size:14px;color: #3a3b3c">The reason this project came to be was, to refresh my knowledge of HTML, and CSS languages.
-                        As well as, to challenge myself to create something that are related to data, information creation, and dashboard. </i>
+                    <i style="font-size:14px;color: #3a3b3c">This project was created to refresh my knowledge of HTML, and CSS languages.
+                        As well as, to challenge myself to create a webpage that allows me to showcase my knowledge in data collection, 
+                        information creation, and reports creation (dashboard).                                           
+                    </i>
                     </p>
 
                     <br>
@@ -174,9 +176,7 @@
                     <strong><i>Django, Python, and JavaScript.</i></strong>
                     </p>
 
-                    <i style="font-size:14px;color: #3a3b3c">The reason this project came to be was, as I was tracking my transactions,
-                    and behaviour on Excel, and had an idea to create a
-                    Webapp to automate, and reduce the steps of tracking, and analyzing them.</i>
+                    <i style="font-size:14px;color: #3a3b3c">This project was created to automate, and reduce the steps of tracking, and analyzing Stocks transactions performance.</i>
                     </p>
                 </div>
 
