--- a/Kang/index.html
+++ b/Kang/index.html
@@ -126,7 +126,7 @@
 
             <div class="main col-lg-7 col-md-6 col-xs-3" style="background-color: #fdffd7;padding:70px; padding-top:120px">
                 <h1>Hello &#128075; I'm Talent Lim</h1>
-                <h4>Data Analyst, currently in &#128205; Jakarta, Indonesia</h4>
+                <h4>Data Analyst, currently in &#128205; Melbourne, Australia</h4>
                 <br><br>
                 
                 <p id="desc">
@@ -135,7 +135,8 @@
                     <a href="https://www.linkedin.com/in/justin-trisno-25b20514b">Justin</a>, 
                     whom I met during my internship.
                     
-                    <br><br>Currently working in PermataBank, 
+                    <br><br>Currently studying Information Technology at Monash University.
+                    <br>Worked as a Data Analyst at PermataBank, 
                     analysing portfolio and creating insights.
                     <br>Favorite tools for analytics include
                     <strong><i>SAS, SQL, Excel, and Python (Jupyter Notebook)</i></strong>.
