--- a/Kang/experience.html
+++ b/Kang/experience.html
@@ -115,14 +115,14 @@
                 
                 <div>
                     <br>
-                    <h5>October 2021 – Present</h5>
-                    <h4>DATA ANALYST | CONSUMER BANKING ANALYST - PERMATABANK</h4>
+                    <h5>October 2021 – October 2024</h5>
+                    <h4>CONSUMER BANKING ANALYST - PERMATABANK</h4>
                     <p>- Identify trends, visualize, and present insights to internal stakeholders
                     <strong><i>using SAS, and Python.</i></strong>
                     
                     <br>- Conducted root cause analysis of <strong><i>2Mio</i></strong> duplicated customers unique identification number.
-                    <br>- Proposed new campaign approach using transactions history. Resulted
-                    in increase of Bancassurance Campaign take up rate by <strong>230% from 1.3% to 3% close won rate.</strong></p>
+                    <br>- Revamped Bancassurance Campaign for Priority customers. Resulted
+                    in increase of Bancassurance Campaign take up rate by <strong>667% from 1.2% to 8% (IDR 4Bio (AUD 400K) increase in revenue).</strong></p>
 
                     <br>
                     <h5>May 2021 – June 2021</h5>
