--- a/Kang/index.html
+++ b/Kang/index.html
@@ -130,7 +130,7 @@
                 <br><br>
                 
                 <p id="desc">
-                    Graduated with a degree in Accounting.
+                    Graduated with a Bachelor's degree in Accounting.
                     <br>Self learn coding with the help of a friend 
                     <a href="https://www.linkedin.com/in/justin-trisno-25b20514b">Justin</a>, 
                     whom I met during my internship.
