--- a/Kang/index.html
+++ b/Kang/index.html
@@ -135,7 +135,7 @@
                     <a href="https://www.linkedin.com/in/justin-trisno-25b20514b">Justin</a>, 
                     whom I met during my internship.
                     
-                    <br><br>Currently studying Information Technology at Monash University.
+                    <br><br>Currently Pursuing Master of Information Technology at Monash University.
                     <br>Worked as a Data Analyst at PermataBank, 
                     analysing portfolio and creating insights.
                     <br>Favorite tools for analytics include
